# myochallenge_2025eval

./: .gitignore  Dockerfile.base  Dockerfile.train  README.md  cem_planner.py  cem_worker.py  config.py  curriculum_env.py  custom_env.py  docker-compose.yaml  dr_spcrl.py  env_factory.py  env_policy.py  hrl_sanity_check.py  hrl_utils.py  lab.ipynb  makefile  manager_env.py  mppi_planner.py  nginx.conf  pd_controller.py  plots.ipynb  pyproject.toml  run_hier_agent.py  train.py  train_hrl.py  train_manager.py  train_ppo.py  train_ppo_hrl.py  train_ppo_hrl_lattice.py  train_ppo_hrl_lattice_dist.py  train_ppo_hrl_lattice_no.py  train_ppo_lattice.py  train_ppor_hrl_lattice.py  train_sac.py  train_sac_hrl.py  train_sac_hrl_2.py  train_sac_hrl_lattice.py  train_sac_lattice.py  train_worker.py  (+2 more)
callbacks/: curriculum_callback.py  eval_callback.py  eval_cb.py  infologger_callback.py  videoCallback.py  video_callback.py
dr_spcrl/: curriculum_env.py  dr_spcrl.py
evals/: eval_hrl_ppo_lattice.py  eval_ppo.py  eval_ppo_hrl.py  eval_ppo_hrl_lattice.py  eval_ppo_lattice.py  eval_ppor_hrl_lattice.py  eval_sac.py  eval_sac_hrl.py  eval_sac_hrl_lattice.py  eval_sac_lattice.py
hrl/: hrl_sanity_check.py  hrl_utils.py  manager_env.py  manager_env_2.py  noise_ann_cb.py  train.py  train_with_cus_policy.py  utils.py  worker_env.py  worker_env_2.py
lattice/: distributions.py
lattice/ppo/: policies.py
lattice/sac/: policies.py
metrics/: auc.py
render_video/: README.md  render_video.py
utils/: callbacks.py  helper.py  model_helper.py
