[project]
name = "myochallenge-2025eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.75.1",
    "grpcio-tools>=1.75.1",
    "gymnasium[other]==0.29.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "myosuite>=2.11.4",
    "numpy>=2.3.3",
    "protobuf>=6.32.1",
    "requests>=2.32.5",
    "stable-baselines3[extra]>=2.7.0",
    "torch>=2.8.0",
]

[[tool.uv.index]] 
url = "https://pypi.tuna.tsinghua.edu.cn/simple" 
default = true
