[project]
name = "myochallenge-2025eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "distrax>=0.1.5",
    "envpool>=0.8.4",
    "flax>=0.10.6",
    "grpcio>=1.75.1",
    "grpcio-tools>=1.75.1",
    "gymnasium[other]==0.29.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "jax[cuda12]>=0.5.3",
    "jaxlib>=0.5.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "mujoco==3.3.0",
    "myosuite>=2.11.4",
    "numpy<2.0.0",
    "optax>=0.2.6",
    "protobuf>=6.32.1",
    "requests>=2.32.5",
    "stable-baselines3>=2.7.0",
    "sb3-contrib>=2.7.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch>=2.8.0",
    "typer>=0.19.2",
    "deprl>=0.3.2",
]

[[tool.uv.index]] 
url = "https://pypi.tuna.tsinghua.edu.cn/simple" 
default = true
